WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
76242
[Mac][DRT] Should support --no-timeout
https://bugs.webkit.org/show_bug.cgi?id=76242
Summary
[Mac][DRT] Should support --no-timeout
Hajime Morrita
Reported
2012-01-12 20:14:48 PST
This is a part of the effort to run Dromaeo on DRT.
Attachments
Patch
(4.49 KB, patch)
2012-01-12 21:21 PST
,
Hajime Morrita
no flags
Details
Formatted Diff
Diff
Patch for landing
(4.54 KB, patch)
2012-01-12 23:09 PST
,
Hajime Morrita
no flags
Details
Formatted Diff
Diff
Patch for landing
(4.53 KB, patch)
2012-01-12 23:25 PST
,
Hajime Morrita
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2012-01-12 20:19:43 PST
(In reply to
comment #0
)
> This is a part of the effort to run Dromaeo on DRT.
Alternatively, we can set a really high timeout (e.g. 30minutes) as done in perftestrunner:
http://trac.webkit.org/browser/trunk/Tools/Scripts/webkitpy/performance_tests/perftestsrunner.py
Hajime Morrita
Comment 2
2012-01-12 21:21:49 PST
Created
attachment 122367
[details]
Patch
Hajime Morrita
Comment 3
2012-01-12 21:23:43 PST
> Alternatively, we can set a really high timeout (e.g. 30minutes) as done in perftestrunner:
http://trac.webkit.org/browser/trunk/Tools/Scripts/webkitpy/performance_tests/perftestsrunner.py
Yes. It will work in both way. We need some watchdog somehow and there is one in NRWT. I just posted no-timeout version.
Hajime Morrita
Comment 4
2012-01-12 21:24:33 PST
> Yes. It will work in both way. We need some watchdog somehow and there is one in NRWT. > I just posted no-timeout version.
This is also useful when you run DRT on the debugger.
Hajime Morrita
Comment 5
2012-01-12 22:12:57 PST
CC-ing folks who will know Mac DRT well...
Darin Adler
Comment 6
2012-01-12 22:28:34 PST
Comment on
attachment 122367
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=122367&action=review
Looks OK.
> Tools/DumpRenderTree/mac/DumpRenderTree.mm:1109 > + ASSERT(timer); > + waitToDumpWatchdog = timer;
Should also ASSERT(!waitToDumpWatchdog)
Hajime Morrita
Comment 7
2012-01-12 23:04:58 PST
Hi Darin, Thanks much for your quick response!
> > Tools/DumpRenderTree/mac/DumpRenderTree.mm:1109 > > + ASSERT(timer); > > + waitToDumpWatchdog = timer; > > Should also ASSERT(!waitToDumpWatchdog)
Will fix before landing.
Hajime Morrita
Comment 8
2012-01-12 23:09:30 PST
Created
attachment 122372
[details]
Patch for landing
WebKit Review Bot
Comment 9
2012-01-12 23:12:25 PST
Comment on
attachment 122372
[details]
Patch for landing Rejecting
attachment 122372
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/Tools/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output:
http://queues.webkit.org/results/11115837
Hajime Morrita
Comment 10
2012-01-12 23:25:26 PST
Created
attachment 122375
[details]
Patch for landing
WebKit Review Bot
Comment 11
2012-01-13 00:47:23 PST
Comment on
attachment 122375
[details]
Patch for landing Clearing flags on attachment: 122375 Committed
r104902
: <
http://trac.webkit.org/changeset/104902
>
WebKit Review Bot
Comment 12
2012-01-13 00:47:28 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug