[Mac][DRT] Should support --no-timeout https://bugs.webkit.org/show_bug.cgi?id=76242

Patch by Hajime Morrita <morrita@chromium.org> on 2012-01-13
Reviewed by Darin Adler.

* DumpRenderTree/mac/DumpRenderTree.mm:
(initializeGlobalsFromCommandLineOptions): Added "--no-timeout" to the options list.
(setWaitToDumpWatchdog): Added to encapsulate the waitToDumpWatchdog global variable.
(shouldSetWaitToDumpWatchdog): Added to check the useTimeoutWatchdog flag set by the option.
* DumpRenderTree/mac/DumpRenderTreeMac.h:
* DumpRenderTree/mac/LayoutTestControllerMac.mm:
(LayoutTestController::setWaitToDump): Now calls shouldSetWaitToDumpWatchdog() to check the flag.

Canonical link: https://commits.webkit.org/93053@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104902 268f45cc-cd09-0410-ab3c-d52691b4dbfc